Strip out unneeded HTML, Blueprint; Add Frameless
Signed-off-by: Alex Coles <alex@alexbcoles.com>

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,12 @@
-<div id="header">
-  <nav id="menu-left">
-    <h2>search</h2>
+<header id="site-header">
+  <nav id="site-menu">
+    <h3>categories</h3>
+    <ul>
+      <li><a href="/code/">Code</a></li>
+      <li><a href="/me/">Me</a></li>
+    </ul>
+    <!-- <h3>tags</h3> -->
+    <h3>search</h3>
     <form action="http://www.google.com/cse" id="cse-search-box">
       <div id="search">
         <input type="hidden" name="cx" value="004211119241033965410:bbu9uuwp4m8" />
@@ -8,24 +14,22 @@
         <input type="text" id="q" name="q" size="35" />
       </div>
     </form>
-    <h2>categories</h2>
-    <p>
-      <a href="/code/">Code</a> |
-      <a href="/me/">Me</a>
-    </p>
-    <!--    <h2>tags</h2> -->
   </nav>
+
+  <!--
   <div id="home">
     <h1><a href="/"><img src="/images/home.png"></a></h1>
   </div>
-  <nav id="menu-right">
-    <h2>about</h2>
+  -->
+
+  <nav id="links-menu">
+    <h3>about</h3>
     <p><strong>Alex B Coles</strong> is a web developer.</p>
-    <h2>links</h2>
-    <p>
-      <a href="http://twitter.com/myabc">Twitter</a> |
-      <a href="http://feeds.alexbcoles.com/alexbcoles">RSS</a> |
-      <script type="text/javascript">
+    <h3>links</h3>
+    <ul>
+      <li><a href="http://twitter.com/myabc">Twitter</a></li>
+      <li><a href="http://feeds.alexbcoles.com/alexbcoles">RSS</a></li>
+      <li><script type="text/javascript">
       //<![CDATA[
 
       function hiveware_enkoder(){var i,j,x,y,x=
@@ -57,15 +61,13 @@
       while(x=eval(x));}hiveware_enkoder();
 
       //]]>
-      </script> |
-      <a href="http://github.com/myabc">GitHub</a> |
-      <a href="http://delicious.com/alexbcoles">Delicious</a> |
-      <a href="http://www.linkedin.com/in/alexandercoles">LinkedIn</a> |
-      <a href="http://www.workingwithrails.com/person/12021-alex-coles">Working with Rails</a> |
-      <a href="http://www.ohloh.net/accounts/myabc">Ohloh</a> |
-      <a href="http://stackoverflow.com/users/3789/myabc">Stack Overflow</a>
-    </p>
+      </script></li>
+      <li><a href="http://github.com/myabc">GitHub</a></li>
+      <li><a href="http://delicious.com/alexbcoles">Delicious</a></li>
+      <li><a href="http://www.linkedin.com/in/alexandercoles">LinkedIn</a></li>
+      <li><a href="http://www.workingwithrails.com/person/12021-alex-coles">Working with Rails</a></li>
+      <li><a href="http://www.ohloh.net/accounts/myabc">Ohloh</a></li>
+      <li><a href="http://stackoverflow.com/users/3789/myabc">Stack Overflow</a></li>
+    </ul>
   </nav>
-  <div class="clear-float">
-  </div>
-</div>
+</header>
