--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,4 @@
-<footer id="footer">
-  <div id="image-left">
-  </div>
-  <div id="footer-text">
+<footer id="colophon">
   <p>
     © Copyright {{ site.time | date: "%Y" }}, Alex B Coles.<br/>
     This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/">Creative Commons Attribution-Noncommercial-Share Alike 3.0 United States License</a>.<br/>
@@ -18,10 +15,7 @@
     Comments powered by <a href="http://disqus.com">Disqus</a>.<br/>
     <br/>
   </p>
-  </div>
   <div id="image-right">
     <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/"><img alt="Creative Commons License" style="border-width:0" src="/images/cc70.png" /></a>
-  </div>
-  <div class="clear-float">
   </div>
 </footer>
