Add colours, Begin laying out article list
Signed-off-by: Alex Coles <alex@alexbcoles.com>

--- a/_includes/post_item.html
+++ b/_includes/post_item.html
@@ -1,4 +1,4 @@
-<article>
+<article class="excerpt">
   <div class="meta-post">
     <div class="meta-title">
       <h2><a href="{{ post.id }}.html">{{ post.title }}</a></h2>
