--- a/_sass/partials/_base.sass
+++ b/_sass/partials/_base.sass
@@ -42,17 +42,20 @@ $cols16: (16 * ($column + $gutter) - $gutter) / $em
 
 
 
-$font_color: #000
-$link_color: #631F66
+$crimson: #DC143C
 
-$link_hover_color:    #42204C
-$link_focus_color:    $link_hover_color
-$link_active_color:   $link_color + #C00
-$link_visited_color:  $link_color - #333
+
+// $font_color: #000
+// $link_color: #631F66
+
+// $link_hover_color:    #42204C
+// $link_focus_color:    $link_hover_color
+// $link_active_color:   $link_color + #C00
+// $link_visited_color:  $link_color - #333
 
 // css class conflicts with Jekyll / Pygments
-$highlight_color: rgba(0, 0, 0, 0.5)
+//$highlight_color: rgba(0, 0, 0, 0.5)
 
 $base-font-family:       "ff-dagny-web-pro-1","ff-dagny-web-pro-2", 'Helvetica', sans-serif
-$blueprint-fixed-font-family: 'andale mono', 'lucida console', monospace
-$blueprint-font-size:         14px
+//$blueprint-fixed-font-family: 'andale mono', 'lucida console', monospace
+//$blueprint-font-size:         14px
