--- a/_sass/partials/_layout.sass
+++ b/_sass/partials/_layout.sass
@@ -4,6 +4,13 @@ section.content
   +width(16)
   margin: 0 auto
 
+section.content article.excerpt
+  float: left
+  +width(8)
+
+footer
+  clear: both
+
 /*
  *  An easy way to zoom your entire layout in or out (as long as it's set in ems).
  *  Just change the media queries to activate them.
