--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -5,14 +5,7 @@
 @import "partials/html5_reset"
 @import "partials/typography"
 @import "partials/layout"
+@import "partials/colours"
+
 @import "partials/code"
-
-a:link
-  color: #000
-a:visited
-  color: #666
-
-
-
-
-
+@import "partials/navigation"
