--- a/_sass/partials/_typography.sass
+++ b/_sass/partials/_typography.sass
@@ -6,14 +6,17 @@ body
   line-height:  $line-height / $em
 
 h1
+  font-family: 'DINNextW01-CondensedBol'
   font-size:    2em
   line-height:  ($line-height / $em) * 2
 
 h2
+  font-family: 'DINNextW01-CondensedBol'
   font-size:    1.2em
   line-height:  ($line-height / $em) * 2
 
 h3, h4, h5, h6
+  font-family: 'DINNextW01-CondensedBol'
   font-size:    1em
 
 footer#colophon p
