building right menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,22 @@
       {{ content }}
     </section>
     <section class="menu">
-      just some text
+      <div class="square-menu">
+        <h2>about me</h2>
+        <p>Alex B Coles is a web developer</p>
+      </div>
+      <div class="square-menu">
+        <h2>follow me</h2>
+        <p>Alex B Coles is a web developer</p>
+      </div>
+      <div class="square-menu">
+        <h2>about me</h2>
+        <p>Alex B Coles is a web developer</p>
+      </div>
+      <div class="square-menu">
+        <h2>follow me</h2>
+        <p>Alex B Coles is a web developer</p>
+      </div>
     </section>
   </div>
   {% include footer.html %}
