--- a/_sass/partials/_layout.sass
+++ b/_sass/partials/_layout.sass
@@ -19,9 +19,12 @@ section.content article.excerpt
   float: left
   +width(7)
   //:padding-left 2em
-  h2, p
+  p, time
     :padding-left 2em
     :padding-right 2em
+  h2
+    :padding-right 2em
+    :padding-top 1em
 
 #space-header
   float: left
@@ -31,6 +34,8 @@ section.content article.excerpt
   float: left
   +width(2)
 
+.square-menu
+  :margin-top 2em
 
 footer
   clear: both
