--- a/_sass/partials/_typography.sass
+++ b/_sass/partials/_typography.sass
@@ -19,5 +19,17 @@ h3, h4, h5, h6
   font-family: 'DINNextW01-CondensedBol'
   font-size:    1em
 
+time
+  font-family: 'DINNextW01-CondensedReg'
+  font-size:    1em
+
 footer#colophon p
   font-size:    0.825em
+
+.square-menu
+  h2
+    font-family: 'DINNextW01-CondensedBol'
+    font-size:    1em
+  p
+    font-family: 'DINNextW01-CondensedReg'
+    font-size:    0.825em
