--- a/_sass/partials/_colours.sass
+++ b/_sass/partials/_colours.sass
@@ -12,6 +12,10 @@ h1, h2
     color:            inherit
     text-decoration:  none
 
+time
+  color: gray
+  border-bottom: 1px solid $crimson
+
 \::selection
   background: $crimson
   color: white
@@ -29,9 +33,10 @@ img::-moz-selection
 body
   -webkit-tap-highlight-color: rgba(255, 0, 0, 0.62)
 
-
-article
-  border-bottom: 1px solid $crimson
+.square-menu
+  background: $crimson
+  p, h2
+    color: white
 
 #site-header-wrapper
   background-color: $crimson
