--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -41,7 +41,12 @@ h2 { font-family: "DINNextW01-CondensedBol"; font-size: 1.2em; line-height: 3em;
 
 h3, h4, h5, h6 { font-family: "DINNextW01-CondensedBol"; font-size: 1em; }
 
+time { font-family: "DINNextW01-CondensedReg"; font-size: 1em; }
+
 footer#colophon p { font-size: 0.825em; }
+
+.square-menu h2 { font-family: "DINNextW01-CondensedBol"; font-size: 1em; }
+.square-menu p { font-family: "DINNextW01-CondensedReg"; font-size: 0.825em; }
 
 header#site-header, footer#colophon { width: 70.5em; margin: 0 auto; }
 
@@ -52,11 +57,14 @@ section.content { float: left; width: 61.5em; }
 section.menu { float: left; width: 7.5em; }
 
 section.content article.excerpt { float: left; width: 30em; }
-section.content article.excerpt h2, section.content article.excerpt p { padding-left: 2em; padding-right: 2em; }
+section.content article.excerpt p, section.content article.excerpt time { padding-left: 2em; padding-right: 2em; }
+section.content article.excerpt h2 { padding-right: 2em; padding-top: 1em; }
 
 #space-header { float: left; width: 61.5em; }
 
 #content-header { float: left; width: 7.5em; }
+
+.square-menu { margin-top: 2em; }
 
 footer { clear: both; }
 
@@ -68,6 +76,8 @@ a:visited { color: #666666; }
 h1, h2 { color: #dc143c; }
 h1 a:link, h1 a:visited, h2 a:link, h2 a:visited { color: inherit; text-decoration: none; }
 
+time { color: gray; border-bottom: 1px solid #dc143c; }
+
 ::selection { background: #dc143c; color: white; }
 
 ::-moz-selection { background: #dc143c; color: white; }
@@ -78,7 +88,8 @@ img::-moz-selection { background: transparent; }
 
 body { -webkit-tap-highlight-color: rgba(255, 0, 0, 0.62); }
 
-article { border-bottom: 1px solid #dc143c; }
+.square-menu { background: #dc143c; }
+.square-menu p, .square-menu h2 { color: white; }
 
 #site-header-wrapper { background-color: #dc143c; border-bottom: 0.5em solid #333333; }
 
