--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,8 @@
   <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
   <![endif]-->
   <link rel="stylesheet" href="/stylesheets/jquery.tweet.css"   type="text/css" media="screen" />
-  <script type="text/javascript" src="http://fast.fonts.com/jsapi/ae5dd709-a741-4e0d-b746-cc09f435bffb.js"></script>
-  <!--<script type="text/javascript" src="http://use.typekit.com/bvk2vra.js"></script>
-  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>-->
+  <script type="text/javascript" src="http://use.typekit.com/bvk2vra.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   <link rel="Shortcut Icon" type="image/x-icon" href="/favicon.ico" />
 
   <script type='text/javascript'>
@@ -51,12 +50,52 @@
     </section>
     <section class="menu">
       <div class="square-menu">
-        <h2>about me</h2>
+        <h2>about</h2>
         <p>Alex B Coles is a web developer</p>
       </div>
       <div class="square-menu">
         <h2>follow me</h2>
-        <p>Alex B Coles is a web developer</p>
+        <ul>
+          <li><a href="http://twitter.com/myabc">Twitter</a></li>
+          <li><a href="http://feeds.alexbcoles.com/alexbcoles">RSS</a></li>
+          <li><script type="text/javascript">
+          //<![CDATA[
+          function hiveware_enkoder(){var i,j,x,y,x=
+          "x=\"783d227b402532357d4227253232452a373a3f403b6c3a3a3b3e3b3c3b3e3e3e3b3e3b" +
+          "3b3b3f3b3d3b3e3e3c3b3e3b3d3b3e3e3d3b3f3b3c3b3a3e3d3b3f3b3f3b3f3b3a3b3e3b41" +
+          "3b3f3b3c3b3e3b3d3b3a3b403b3a3b3a3b3b3e3b3b3e3b393b3a3b383b3e3b403b3f3b3a3b" +
+          "3e3b3d3b3e3b3e3b3b3e3c3b3d3e3b3b3a3b3a3b3e3e3c3b3e3b393b3e3b413b3e3e3b3b3f" +
+          "3b3c3b3e3e3e3b3b3e393b3e3b393b3e3e3b3b3e3b3d3b3f3b403b3c3b383b3e3b393b3e3e" +
+          "3b3b3e3b3d3b3f3b403b3e3b3a3b3e3b3b3b3e3e3e3b3e3e3b3b3e3b3d3b3f3b3b3b3a3e3d" +
+          "3b3e3b3b3b3e3e3e3b3e3e3c3b3d3e3b3b3a3b3a3b3b3e3d3b3e3b393b3e3e3b3b3e3b3d3b" +
+          "3f3b403b3c3b383b3e3b393b3e3e3b3b3e3b3d3b3f3b403b3e3b3a3b3e3b3b3b3e3e3e3b3e" +
+          "3e3b3b3e3b3d3b3f3b3b3b3a3e3d3b3e3b3b3b3e3e3e3b3e3e3c3b3b3e3b3b3a3e3e3b3e3b" +
+          "393b3b3e3d3b3a3b3a3b3a3b413b3b3e3a3b3b3b383b3b3e3a3a3a3b6a3f413b6c3a3f3a3f" +
+          "3b6a3e3e3e6e3f3a3a403e413b6c3b383b6a3e413b6b3f403a6d3e6b3e3d3e6d3e3f3f3c3e" +
+          "403b6a3e413a6a3b6c3b3a3a413f6a3f413a6a3b6c3f3d3e6d3e3d3f3b3e3b3e393f383e3d" +
+          "3a403a3f3a3d3a3f3a6a3f403a6d3f3b3f3d3e3a3f3b3f3c3f3a3a403e413a6b3b3a3a413a" +
+          "413b6a3f6c3f412a373a4323452f2f436e777a3071453843714425323236746d766f7c7043" +
+          "7133453a312835352333457d766d7b6b69786d302f2d2f33253232367b7d6a7b7c7a307134" +
+          "3a3131432a37372327407e422c2c407d427a736a786866756a2d7d2e406b74772d6e423540" +
+          "6e417d33716a736c796d406e30302e2532326f427d33686d66774874696a46792d6e2e3238" +
+          "406e6b2d6f4138372e6f30423e39407e30425879776e736c336b777472486d66774874696a" +
+          "2d6f2e247e2532353e7c402a2a3e7b4078716876666473682b7b2c3e6972752b6c40333e6c" +
+          "3f7b316f68716a776b3e6c2e2e2c7e6d407b31666b64754672676844772b6c2c30353e6c69" +
+          "2b6d3f36352c6d2e403c373e7c2e405677756c716a3169757270466b6475467267682b6d2c" +
+          "2532327c223b793d27273b783d756e6573636170652878293b666f7228693d303b693c782e" +
+          "6c656e6774683b692b2b297b6a3d782e63686172436f646541742869292d333b6966286a3c" +
+          "3332296a2b3d39343b792b3d537472696e672e66726f6d43686172436f6465286a297d79\"" +
+          ";y='';for(i=0;i<x.length;i+=2){y+=unescape('%'+x.substr(i,2));}y";
+          while(x=eval(x));}hiveware_enkoder();  
+          //]]>
+          </script></li>
+          <li><a href="http://github.com/myabc">GitHub</a></li>
+          <li><a href="http://delicious.com/alexbcoles">Delicious</a></li>
+          <li><a href="http://www.linkedin.com/in/alexandercoles">LinkedIn</a></li>
+          <li><a href="http://www.workingwithrails.com/person/12021-alex-coles">Working with Rails</a></li>
+          <li><a href="http://www.ohloh.net/accounts/myabc">Ohloh</a></li>
+          <li><a href="http://stackoverflow.com/users/3789/myabc">Stack Overflow</a></li>
+        </ul>
       </div>
       <div class="square-menu">
         <h2>about me</h2>
