--- a/_sass/partials/_typography.sass
+++ b/_sass/partials/_typography.sass
@@ -6,30 +6,30 @@ body
   line-height:  $line-height / $em
 
 h1
-  font-family: 'DINNextW01-CondensedBol'
+  font-family:  "ff-meta-web-pro-condensed-1","ff-meta-web-pro-condensed-2"
   font-size:    2em
   line-height:  ($line-height / $em) * 2
 
 h2
-  font-family: 'DINNextW01-CondensedBol'
+  font-family:  "ff-meta-web-pro-condensed-1","ff-meta-web-pro-condensed-2"
   font-size:    1.2em
   line-height:  ($line-height / $em) * 2
 
 h3, h4, h5, h6
-  font-family: 'DINNextW01-CondensedBol'
+  font-family:  "ff-meta-web-pro-condensed-1","ff-meta-web-pro-condensed-2"
   font-size:    1em
 
 time
-  font-family: 'DINNextW01-CondensedReg'
-  font-size:    1em
+  font-family:  "ff-meta-web-pro-condensed-1","ff-meta-web-pro-condensed-2"
+  font-size:    0.825em
 
 footer#colophon p
   font-size:    0.825em
 
 .square-menu
   h2
-    font-family: 'DINNextW01-CondensedBol'
+    font-family:  "ff-meta-web-pro-condensed-1","ff-meta-web-pro-condensed-2"
     font-size:    1em
   p
-    font-family: 'DINNextW01-CondensedReg'
+    font-family:  "ff-meta-web-pro-condensed-1","ff-meta-web-pro-condensed-2"
     font-size:    0.825em
