--- a/_sass/partials/_base.sass
+++ b/_sass/partials/_base.sass
@@ -56,6 +56,6 @@ $crimson: #DC143C
 // css class conflicts with Jekyll / Pygments
 //$highlight_color: rgba(0, 0, 0, 0.5)
 
-$base-font-family:       'DIN Next W01 Regular', sans-serif
+$base-font-family:       "ff-meta-serif-web-pro-1","ff-meta-serif-web-pro-2", sans-serif
 //$blueprint-fixed-font-family: 'andale mono', 'lucida console', monospace
 //$blueprint-font-size:         14px
