--- a/_sass/partials/_layout.sass
+++ b/_sass/partials/_layout.sass
@@ -18,6 +18,7 @@ section.menu
 section.content article.excerpt
   float: left
   +width(7)
+
   //:padding-left 2em
   p, time
     :padding-left 2em
@@ -25,6 +26,9 @@ section.content article.excerpt
   h2
     :padding-right 2em
     :padding-top 1em
+
+  &:nth-child(2n+1)
+    clear: both
 
 #space-header
   float: left
